initial_tutorials/sentiment-analyzer/feedback/service.yml
apiVersion: v1
kind: Service
metadata:
    name: sa-feedback
    labels:
        app: sa
        component: feedback
spec:
    ports:
        - port: 80
          protocol: TCP
          targetPort: 80
    selector:
        app: sa
        component: feedback
