initial_tutorials/sentiment-analyzer/feedback/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: sa-ingress-feedback
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
    rules:
        - http:
              paths:
                  - path: /feedback
                    backend:
                        serviceName: sa-feedback
                        servicePort: 80
